--- a/index.html
+++ b/index.html
@@ -165,7 +165,7 @@
 			 <center>
 			 <h1>FREAK FILES</h1>
 			 </center>
-         <p style="width: 90%; height: 75%; margin:auto; overflow: scroll;">
+         <p style="width: 90%; height: 75%; margin:auto; overflow-y: scroll;">
 Tim is a masochist, he moaned when I stabbed him.
 <br>
 The Grim Reaper is his adoptive father.
