--- a/index.html
+++ b/index.html
@@ -21,6 +21,7 @@
          <div id="name_welcome" class="name_welcome">
            <h1>Hello, User</h1>
            <p>Welcome to Amazing Math</p>
+	   <img id="support_jay" src="https://fightingox1.github.io/image_library/Screenshot%202022-04-25%2011.53.00%20AM.png">
          </div>
            <div class="game_icons">
              <div id="FS" class="game_holder">
