--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
          <div id="name_welcome" class="name_welcome">
            <h1>Hello, User</h1>
            <p>Welcome to Amazing Math</p>
-	   <img id="outbreak_banner" src="https://github.com/fightingox1/image_library/blob/main/Untitled%20drawing%20(7).png">
+	   <img id="outbreak_banner" src="https://fightingox1.github.io/image_library/Untitled%20drawing%20(7).png">
          </div>
            <div class="game_icons">
              <div id="FS" class="game_holder">
