--- a/index.html
+++ b/index.html
@@ -159,7 +159,7 @@
        </div>
        <div id="branding" class="branding">
          <h1>Amazing Math</h1>
-         <h2>By something studios</h2>
+         <h2>By Astral</h2>
        </div>
        <div class="body_page" id="freak_page" style="display:none">
 			 <div id="freak_container" style="freak_container">
