--- a/index.html
+++ b/index.html
@@ -153,7 +153,7 @@
              </div>
            </div>
            <div class="credits" id="credits">
-             <p>Something Studios</p>
+             <p>Astral</p>
            </div>
          </div>
        </div>
@@ -308,7 +308,7 @@ Taylor bit Antoine once apparently, saying he was a dog as well. Antoine kicked 
            main.style.display = 'none';
            banner = "https://fightingox1.github.io/image_library/CityBuilderBanner.png"
            cover = "https://fightingox1.github.io/image_library/CityBuilder.png"
-           description = "An inprogress City Builder Game that is made in house by Something Studios, Please Remember that this game is in progress and is currently just a road renderer";
+           description = "An inprogress City Builder Game that is made in house by Astral, Please Remember that this game is in progress and is currently just a road renderer";
            name = "City Builder";
            game_url = "Projects/city_builder/index.html"
            set_properties(banner, cover, description, name)
