--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
              <div id="FS" class="game_holder">
               <img src="https://fightingox1.github.io/image_library/Screenshot%202022-03-22%208.51.59%20AM.png">
               <p>
-                 <a style="color: #ebdb4d; font-weight: bold;">New: </a>Fruit Slicer!
+                 Fruit Slicer!
               </p>
             </div>
             <div id="City_Builder" class="game_holder">
@@ -39,7 +39,7 @@
             <div id="FF" class="game_holder">
               <img src="https://fightingox1.github.io/image_library/Fighter%20Fun%20.png">
               <p>
-                 <a style="color: #ebdb4d; font-weight: bold;">New: </a>Fighter Fun
+                 Fighter Fun
               </p>
             </div>
             <div id="lava" class="game_holder">
