--- a/Projects/Suduko/index.html
+++ b/Projects/Suduko/index.html
@@ -22,5 +22,11 @@
     <button class="AvalibleNumber" id="Number9" onclick="Number('9')">9<p class="NumLeft" id="NumberLeft9">9</p></button>
   </div>
 
+  <div id="NewGame" class="Hide">
+    <div class="Center">----------------------------- Mistakes -----------------------------</div>
+    <div class="Center" id="MistakeCount">5</div>
+    <button id="NewGameButton" onclick="NewGame()">New Game</button>
+  </div>
+
   <script type="text/javascript" src="script.js"></script>
 </body>
